fix tooltip and legend functionality

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,22 @@
     <div id="narrative">
         <div id="slides-container">
             <div class="slide" id="slide1">
-                <h2>Slide 1: Escalating Trends</h2>
+                <h2>Escalating Trends</h2>
                 <div id="chart1"></div>
                 <div class="annotations" id="annotation1"></div>
             </div>
             <div class="slide" id="slide2">
-                <h2>Slide 2: Geographic Concentration</h2>
+                <h2>Geographic Concentration</h2>
                 <div id="chart2"></div>
                 <div class="annotations" id="annotation2"></div>
             </div>
             <div class="slide" id="slide3">
-                <h2>Slide 3: Devastating Impacts</h2>
+                <h2>Devastating Impacts</h2>
                 <div id="chart3"></div>
                 <div class="annotations" id="annotation3"></div>
             </div>
             <div class="slide" id="slide4">
-                <h2>Slide 4: Understanding the Causes</h2>
+                <h2>Understanding the Causes</h2>
                 <div id="chart4"></div>
                 <div class="annotations" id="annotation4"></div>
             </div>
