--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>California's Wildfire Crisis</h1>
+    <h1>California on Fire: A Visual Journey Through Wildfire Data</h1>
     <div id="narrative">
         <div id="slides-container">
             <div class="slide" id="slide1">
-                <h2>Escalating Trends</h2>
+                <h2>Escalating Trends through Years</h2>
+                <p class="narrative-message">Observe the spread of wildfires in California. A worsenubf crisis is indicated by the increase in fire frequency and total area consumed year over year.</p>
                 <div id="chart1"></div>
                 <div class="annotations" id="annotation1"></div>
             </div>
             <div class="slide" id="slide2">
-                <h2>Geographic Concentration</h2>
+                <h2>Geographic Concentration (2013-2025)</h2>
+                <p class="narrative-message">By emphasizing the regions most affected by fires to determine California's hotspots for wildfire.</p>
                 <div id="chart2"></div>
                 <div class="annotations" id="annotation2"></div>
             </div>
             <div class="slide" id="slide3">
-                <h2>Devastating Impacts</h2>
+                <h2>Devastating Impacts from the Wildfires</h2>
+                <p class="narrative-message">Understand the human and economic toll of these disasters. From the loss of homes to the crippling financial strain on local communities.</p>
                 <div id="chart3"></div>
                 <div class="annotations" id="annotation3"></div>
             </div>
             <div class="slide" id="slide4">
                 <h2>Understanding the Causes</h2>
+                <p class="narrative-message">Explore the root causes behind California's wildfires. This breakdown reveals the primary triggers of these events, emphasizing the significant role of human activity in igniting destructive fires.</p>
                 <div id="chart4"></div>
                 <div class="annotations" id="annotation4"></div>
             </div>
