Added year slider to scene 2

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,13 @@
                 <div class="annotations" id="annotation1"></div>
             </div>
             <div class="slide" id="slide2">
-                <h2>Geographic Concentration (2013-2025)</h2>
+                <h2>Geographic Concentration (2013-2019)</h2>
                 <p class="narrative-message">By emphasizing the regions most affected by fires to determine California's hotspots for wildfire.</p>
+                <div id="slider-container">
+                    <label for="year-slider">Year: </label>
+                    <input type="range" id="year-slider" />
+                    <span id="year-value"></span>
+                </div>
                 <div id="chart2"></div>
                 <div class="annotations" id="annotation2"></div>
             </div>
